--- a/index.html
+++ b/index.html
@@ -3,8 +3,27 @@
 <title>your name</title>
 <body>
 
-<h1>EX MAX BIOGRAPHY</h1>
+<h1>MAX BIOGRAPHY</h1>
 <p>This is a paragraph.</p>
 
+  <table>
+  <tr>
+    <th>2000</th>
+    <th>2005</th>
+    <th>2020</th>
+  </tr>
+  <tr>
+    <td>Escuela tipo Federación</td>
+    <td>Maria Anders</td>
+    <td>Germany</td>
+  </tr>
+  <tr>
+    <td>Escuela Tipo Federación</td>
+    <td>Francisco Chang</td>
+    <td>Mexico</td>
+  </tr>
+</table>
+  
+  
 </body>
 </html>
